--- a/inherit_mrp/views/produksi_weaving.xml
+++ b/inherit_mrp/views/produksi_weaving.xml
@@ -29,17 +29,19 @@
                 <form>
                     <header>
                         <field name="state" widget="statusbar"/>
-                        <button name="button_confirm" type="object" string="Confirm" attrs="{'invisible': [('state', 'in', ('confirm', 'done'))]}" class="oe_highlight"/>
+                        <button name="button_confirm" type="object" string="Confirm" attrs="{'invisible': [('state', 'in', ('confirm','progress', 'done'))]}" class="oe_highlight"/>
                         <button name="button_mark_as_done" type="object" string="Mark As Done" attrs="{'invisible': [('state', 'in', ('draft', 'done'))]}" class="oe_highlight"/>
+                        <button name="create_lot" type="object" string="Create Lot" attrs="{'invisible': [('state', 'in', ('draft', 'progress', 'done'))]}" class="oe_highlight"/>
                         <button name="set_to_draft" type="object" string="Set to draft" attrs="{'invisible': [('state', 'in', ('draft', 'confirm'))]}"/>
                     </header>
                     <sheet>
                         <group>
                             <group>
-                                <field name="beam_id" required="1"/>
+                                <field name="production_id" required="1" options="{'no_open': True, 'no_create': True}"/>
+                                <field name="beam_id" required="1" options="{'no_open': True, 'no_create': True}"/>
                                 <field name="beam_detail_id" domain="[('beaming_id','=',beam_id)]" string="Beam"/>
                                 <field name="lot_id"/>
-                                <field name="machine_id" required="1"/>
+                                <field name="machine_id" required="1" options="{'no_open': True, 'no_create': True}"/>
                                 <field name="date"/>
                                 <field name="rpm"/>
                                 <field name="kd_operator" required="1"/>
@@ -50,19 +52,45 @@
                                 <field name="counter_akhir"/>
                                 <field name="quantity"/>
                                 <field name="counter_pjg"/>
-                                
+                                <field name="lot_weaving_id" readonly="1"/>
                             </group>
                         </group>
-                        <notebook>
+                        <group>
+                            <field name="move_finished_ids" invisible="1">
+                                <tree editable="bottom">
+                                    <field name="product_id"/>
+                                    <field name="product_uom_qty"/>
+                                    <field name="product_uom"/>
+                                    <field name="operation_id"/>
+                                    <field name="byproduct_id"/>
+                                    <field name="name"/>
+                                    <field name="date_deadline"/>
+                                    <field name="picking_type_id"/>
+                                    <field name="location_id"/>
+                                    <field name="location_dest_id"/>
+                                    <field name="company_id"/>
+                                    <field name="warehouse_id"/>
+                                    <field name="origin"/>
+                                    <field name="group_id"/>
+                                    <field name="propagate_cancel"/>
+                                    <field name="move_dest_ids"/>
+                                    <field name="state"/>
+                                    <!-- Useless as the editable in tree declaration -> For Form Test-->
+                                    <field name="product_uom_category_id"/>
+                                    <field name="allowed_operation_ids"/>
+                                </tree>
+                            </field>
+                        </group>
+                        <!-- <notebook>
                             <page string="Weaving Details">
-                                <field name="weaving_details">
+                                <field name="weaving_details" invisible="1">
                                     <tree>
                                         <field name="lot_id"/>
                                         <field name="quantity"/>
                                     </tree>
                                 </field>
                             </page>
-                        </notebook>
+                        </notebook> -->
                     </sheet>
                 </form>
             </field>
